# cab

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GOAL.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-tauri.yml  ci.yml  docs.yml
.omo/run-continuation/: ses_0bb0bb566ffen6Cozu1tDQb0Gl.json  ses_0bb1278eaffegHoFZa4yeK2n3m.json  ses_0bb19c641ffedDhGLXvfNCOw5h.json  ses_11262ab45ffeDcqppce5qnwS61.json  ses_112976eebffeUuG34iQCbXoxpo.json
config/: aa-benchmarks-seed.json  aa-model-map.json  provider-endpoints.defaults.json
coverage/: agents.ts.html  clover.xml  coverage-final.json  index.html
crates/cab/: Cargo.toml
crates/cab-api/: Cargo.toml
crates/cab-api/src/: agents.rs  benchmarks.rs  catalog_provider_urls.rs  dashboard.rs  diagnostics.rs  lib.rs  logs.rs  models.rs  providers.rs  routes.rs  routing.rs  settings.rs  traffic_hook.rs  update.rs  usage.rs
crates/cab-api/tests/: agents_it.rs  api_it.rs
crates/cab-core/: Cargo.toml
crates/cab-core/benches/: routing_bench.rs
crates/cab-core/src/: affinity.rs  benchmark_catalog.rs  config.rs  error.rs  health.rs  lib.rs  model_scores.rs  paths.rs  provider_defaults.rs  routing.rs  subscription_quota.rs  tool_weights.rs  types.rs
crates/cab-db/: Cargo.toml
crates/cab-db/src/: agent.rs  auth.rs  catalog.rs  dashboard.rs  endpoint.rs  lib.rs  log.rs  log_store.rs  model.rs  provider.rs  routability.rs  route.rs  settings.rs  sqlite.rs  state.rs
crates/cab-gateway/: Cargo.toml
crates/cab-gateway/src/: agent_id.rs  anthropic.rs  auth.rs  cloudcode.rs  fallback.rs  gemini.rs  lib.rs  openai.rs  protocol.rs  proxy.rs  router.rs  server.rs  shaping.rs  state.rs
crates/cab-gateway/src/adapters/: anthropic.rs  mod.rs  openai_chat.rs  openai_responses.rs
crates/cab-gateway/src/protocol/: engine.rs  ir.rs  legacy.rs  mod.rs  stream.rs
crates/cab-server/: Cargo.toml
crates/cab-server/src/: lib.rs  main.rs  windows_service.rs
crates/cab-server/tests/: system_tcp.rs  system_v01.rs  uat_scenarios.rs
crates/cab-server/tests/support/: local_uat.rs  mod.rs  real_ca.rs  uat_report.rs
crates/cab-services/: Cargo.toml
crates/cab-services/src/: agent_config.rs  benchmarks.rs  catalog.rs  lib.rs  route_explainer.rs  route_resolver.rs
crates/cab-services/src/agents/: claude_code.rs  codex.rs  hermes.rs  kilocode.rs  mod.rs  openclaw.rs  opencode.rs  pi.rs  reasonix.rs  shared.rs  tests.rs
crates/cab/src/: main.rs
crates/cab/src/service/: install.rs  mod.rs  runtime.rs  scope.rs
docs/: .gitignore  INSTALL.md  INSTALL.zh-CN.md  README.es.md  README.ja.md  README.ko.md  README.md  README.zh-CN.md  astro.config.mjs  package-lock.json  package.json
docs/src/content/docs/: 404.md  index.mdx  install.md
docs/src/content/docs/agents/: supported-agents.md
docs/src/content/docs/getting-started/: install.md  quick-start.md
docs/src/content/docs/guides/: agents.md  gateway-auth.md  providers-and-models.md  routing.md
docs/src/content/docs/project/: changelog.md
docs/src/content/docs/reference/: api.md  architecture.md  supported-agents.md
docs/src/content/docs/zh-cn/: 404.md  index.mdx  install.md
packaging/brew/Casks/: cab-desktop.rb  cab-gui.rb
packaging/brew/Formula/: cab-source.rb  cab.rb
packaging/winget/: xiongdi.cab.yaml
resources/ui/: .gitkeep
scripts/: capture-agent-headers.py  generate-api-types.mjs  generate-manifests.js  generate-openapi.sh  generate-release-body.sh  install-cli.sh  kill-dev-ports.ps1  pre-build.js  probe-ca-headers.sh  probe-one-ca.sh  restore-keys-from-backup.py  run-coverage.mjs  run-tests.sh  run-uat.sh  run-with-setcap.sh  test-cc-headless.ps1  verify-v0.1.sh
scripts/uat/: lib.sh  run-real-ca.sh
spec/: README.md  astro.config.mjs  package-lock.json  package.json
spec/scripts/: generate-docs.mjs
spec/src/: content.config.ts
spec/src/components/: Sidebar.astro  TocSidebar.astro
spec/src/content/docs/acceptance/: acceptance-criteria.md  real-data-validation.md  release-handover.md  uat-execution.md  user-environment.md
spec/src/content/docs/appendix/: approval.md  changelog.md  v-model-mapping.md
spec/src/content/docs/architecture/: integration-strategy.md  integration-test-plan.md  interface-contracts.md  security-model.md  subsystem-decomposition.md
spec/src/content/docs/implementation/: build-ci.md  coding-standards.md  configuration.md  implementation-baseline.md
spec/src/content/docs/integration-test/: integration-test-execution.md  integration-test-report.md  interface-testing.md
spec/src/content/docs/modules/: api-dependencies-io.md  database-tables.md  logic-pseudocode.md  module-decomposition.md  openapi.yaml  (+1 more)
spec/src/data/: chapters.ts
spec/src/layouts/: DocsLayout.astro
spec/src/pages/: index.astro
spec/src/styles/: global.css
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer.nsh  path.nsh
src-tauri/permissions/: allow-get-gateway-port.toml
src-tauri/src/: lib.rs  main.rs
src-tauri/windows/: hooks.nsh
src-tauri/wix/: main.wxs
src-tauri/wix/locales/: en-US.wxl  zh-CN.wxl
src/lib/: agents.test.ts  agents.ts  api-types.ts  api.ts  catalog-brand-colors.ts  data-revision.svelte.ts  gateway-health.svelte.ts  gateway-settings.svelte.ts  i18n.svelte.ts  models-dev.ts  theme.svelte.ts  translations.ts  types.ts
src/lib/components/: Card.svelte  CatalogLogo.svelte  DataTable.svelte  EmptyState.svelte  Modal.svelte  PageHeader.svelte  Sidebar.svelte  StatCard.svelte  StatusBadge.svelte  Toast.svelte
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/agents/: +page.svelte
src/routes/logs/: +page.svelte
src/routes/models/: +page.svelte
src/routes/providers/: +page.svelte
src/routes/routes/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/usage/: +page.svelte
(+32 files in other folders)
