[package]
name = "cab-tauri"
version.workspace = true
edition.workspace = true
license-file.workspace = true

[lib]
name = "cab_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { workspace = true, features = ["blocking", "json"] }
rusqlite = { version = "0.39", features = ["bundled"] }
cab-core = { path = "../crates/cab-core" }
cab-db = { path = "../crates/cab-db" }

[build-dependencies]
tauri-build = { version = "2", features = [] }
