[package]
name = "cab-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cab-core = { path = "../cab-core" }
cab-db = { path = "../cab-db" }
cab-services = { path = "../cab-services" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
http-body-util = "0.1"
serde_json = { workspace = true }
tempfile = "3"
tower = { workspace = true }

