[package]
name = "cab-db"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cab-core = { path = "../cab-core" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
