[package]
name = "cab-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cab-core = { path = "../cab-core" }
cab-db = { path = "../cab-db" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
