[package]
name = "cab-gateway"
version.workspace = true
edition.workspace = true
license-file.workspace = true

[dependencies]
cab-core = { path = "../cab-core" }
cab-db = { path = "../cab-db" }
cab-services = { path = "../cab-services" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio-tungstenite = "0.24"
