[package]
name = "cab-srv"
version.workspace = true
edition.workspace = true
license-file.workspace = true
default-run = "cab-srv"

[lib]
name = "cab_srv"
path = "src/lib.rs"

[[bin]]
name = "cab-srv"
path = "src/main.rs"

[dependencies]
cab-core = { path = "../cab-core" }
cab-db = { path = "../cab-db" }
cab-gateway = { path = "../cab-gateway" }
cab-api = { path = "../cab-api" }
cab-services = { path = "../cab-services" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }

[dev-dependencies]
cab-api = { path = "../cab-api" }
http-body-util = "0.1.3"
reqwest = { workspace = true }
serde_json = { workspace = true }
tempfile = "3.27"
tower = { workspace = true }
chrono = { workspace = true }
