[package]
name = "cab-services"
version.workspace = true
edition.workspace = true
license-file.workspace = true

[dependencies]
cab-core = { path = "../cab-core" }
cab-db = { path = "../cab-db" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
axum = { workspace = true }

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
tower = { workspace = true }
