[package]
name = "cab"
version.workspace = true
edition.workspace = true
license-file.workspace = true

[[bin]]
name = "cab"
path = "src/main.rs"

[dependencies]
cab-core = { path = "../cab-core" }
cab-db = { path = "../cab-db" }
clap = { version = "4.6.1", features = ["derive"] }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
rusqlite = { version = "0.39", features = ["bundled"] }
